fix CampaignScreen